# pdf_ocr_translate

./: .gitignore  AGENTS.md  ENVIRONMENT.md  OPERATIONS.md  PP-StructureV3.py  SYSTEM_DEPLOYMENT.md  TEMPLATE_BACKUP_RESTORE.md  app.py  db.py  deploy.sh  gpt_translate.py  img2_table.py  img2table_pdf.py  merge_service.py  mineru_adapter.py  paddleocr_demo.py  paragraph_extract.py  pdf_export.py  pdf_trans.py  pipeline_ocr_overlay.py  pyproject.toml  run.py  setting_setting.md  table_process.py  worker.py  模板備份還原說明文件.md  系統環境說明文件.md
app/: __init__.py  config.py  errors.py  extensions.py  hooks.py  logging_config.py
app/blueprints/: __init__.py
app/services/: __init__.py  audit_service.py  auth_hooks_service.py  auth_policy.py  auth_service.py  auth_store.py  authz_service.py  batch.py  doc_workspace.py  document_templates.py  docx_export.py  glossary.py  job_store.py  jobs.py  markdown_translate.py  ocr.py  operations_service.py  pipeline.py  pp_structure.py  schema_control.py  (+7 more)
client/: batch_process.py  client.py  paddlex_hps_client-0.2.0-py3-none-any.whl
glossary/: global_glossary.json  system_glossary.json
migrations/: env.py
ocr_pipeline/: __init__.py  merge_logic.py  paragraph_align.py  pipeline.py  table_merge.py
scripts/: backup_mssql_full.sh  backup_templates.sh  init_sqlserver_schema.sql  install_systemd_units.sh  restore_mssql_replace.sh  restore_templates.sh  sync_jobs_from_disk.py
static/: app.css  app.js  editor.js  glossary_manager.js  job_filters.js  template_editor.js  upload_files.js
table_recognition_v2_output/: pruned_result_page_0.json
templates/: editor.html  index.html
tests/: conftest.py  test_alembic_baseline.py  test_api_timeout.py  test_app.py  test_app_config_runtime.py  test_audit_logging.py  test_auth_phase1.py  test_auth_phase2_ldap.py  test_batch_dedup.py  test_docx_export.py  test_glossary_cache.py  test_glossary_management.py  test_job_store.py  test_markdown_translate_html.py  test_merge_logic.py  test_ocr_pipeline_scores.py  test_ocr_score_filtering.py  test_operations_cli.py  test_paragraph_align_fallback.py  test_pdf_overlay.py  test_pp_score_filtering.py  test_realtime_translate.py  test_region_order.py  test_word_translate.py
(+46 files in other folders)
