[project]
name = "paddleocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "colorlog>=6.10.1",
  "fastapi>=0.128.6",
  "flask>=3.1.2",
  "ipykernel>=7.1.0",
  "openai>=2.18.0",
  "opencv-python>=4.13.0.92",
  "paddlex>=3.4.1",
  "pikepdf>=10.3.0",
  "pymupdf>=1.26.7",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.22",
  "requests>=2.32.5",
  "sentence-transformers>=5.2.2",
  "torch<2.7.0",
  "torchvision<0.22.0",
  "uvicorn>=0.40.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
