[project]
name = "paddleocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "chandra-ocr>=0.2.0",
  "colorlog>=6.10.1",
  "flask>=3.1.2",
  "flask-login>=0.6.3",
  "gunicorn>=25.3.0",
  "alembic>=1.13.2",
  "img2table>=1.4.2",
  "ipykernel>=7.1.0",
  "jieba>=0.42.1",
  "ldap3>=2.9.1",
  "openai>=2.18.0",
  "paddlex>=3.4.1",
  "pdf2image>=1.17.0",
  "pdfplumber>=0.11.9",
  "pdftext>=0.6.3",
  "pikepdf>=10.3.0",
  "polars[rtcompat]>=1.40.1",
  "pyodbc>=5.2.0",
  "pymupdf>=1.26.7",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
  "sentence-transformers>=5.2.2",
  "sqlalchemy>=2.0.44",
  "torch==2.6.0",
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "spacy>=3.8.14",
  "sympy==1.13.1",
  "pytest>=9.0.3",
  "opencv-contrib-python==4.13.0.92",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
